# gnet

./: .gitignore  BUILD  README.md  WORKSPACE  codegen.bat  codegen.sh  go.mod  go.sum
app/: README.md
app/sync/: README.md
chat/events/: BUILD.bazel  iam.proto
chat/pb/: events.pb.go  events.proto  protos.pb.go
iam/events/: BUILD.bazel  chat.proto
iam/pb/: events.pb.go  protos.pb.go  protos.proto
lib/: README.md
lib/db/event_store/: in_memory.go  in_memory_test.go  types.go
lib/event_store/: BUILD  in_memory.go
lib/events/: iam.proto
lib/eventstore/: factory.go  in_memory.go  in_memory_test.go
lib/filestore/: factory.go  in_memory.go
lib/scan/proto/: BUILD.bazel
photos/: BUILD.bazel
photos/builders/: photo_metadata.go
photos/events/: BUILD.bazel  factory.go  photos.proto
photos/events/pb/: photos.pb.go
photos/events/proto/: BUILD.bazel
photos/pb/: events.pb.go  events.proto
photos/web-photos/: BUILD.bazel  README.md  cmd.go  main.go
photos/web-photos/server/: server.go
svc/: README.md
svc/de/: BUILD.bazel  main.go
svc/de/proto/: BUILD.bazel  protos.proto
sys/eventstore/: BUILD  factory.go  in_memory.go  in_memory_test.go  types.go
sys/filestore/: BUILD.bazel  factory.go  in_memory.go  in_memory_test.go  types.go
sys/gnet/: services.go  types.go
sys/keyvaluestore/: factory.go  in_memory.go  in_memory_test.go  types.go
sys/lib-eventstore/: in_memory.go  types.go
sys/lib-filestore/: in_memory.go  types.go
sys/lib-scan/: BUILD.bazel  scan_client.go
sys/lib-scan/proto/: protos.proto
sys/pb/: domainevents.pb.go  domainevents.proto
sys/rpc-domainevents/: BUILD.bazel  README.md  main.go  server_test.go
sys/rpc-domainevents/pb/: protos.pb.go
sys/rpc-domainevents/proto/: BUILD.bazel  protos.proto
sys/rpc-domainevents/server/: server.go  server_test.go
sys/scan/: BUILD.bazel  scan_client.go
sys/scan/pb/: protos.pb.go
sys/scan/proto/: BUILD.bazel
sys/scanclient/: scan_client.go  scan_client_test.go
sys/scanclient/pbscanclient/: protos.pb.go  protos.proto
sys/views/: scan_client.go  scan_client_test.go  types.go  worker.go
test/e2e/: README.md
test/fakeuploader/: sim.go
test/simulator/: main.go  sim.go
test/uberserver/: server.go  server_test.go
web/: README.md
web/photos/: cmd.go
wkr/: README.md
wkr/photos/: README.md
