load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/example/project/web/photos",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "photos",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
