load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "iam_proto",
    srcs = ["iam.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "iam_go_proto",
    importpath = "github.com/graeme-hill/gnet/chat/events",
    proto = ":iam_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":iam_go_proto"],
    importpath = "github.com/graeme-hill/gnet/chat/events",
    visibility = ["//visibility:public"],
)
