load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "chat_proto",
    srcs = ["chat.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "chat_go_proto",
    importpath = "github.com/graeme-hill/gnet/iam/events",
    proto = ":chat_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":chat_go_proto"],
    importpath = "github.com/graeme-hill/gnet/iam/events",
    visibility = ["//visibility:public"],
)
