load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "github.com/graeme-hill/gnet/photos/web-photos",
    visibility = ["//visibility:private"],
    deps = [
        "//sys/eventstore:go_default_library",
        "//sys/filestore:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/oklog/ulid:go_default_library",
    ],
)

go_binary(
    name = "web-photos",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
