load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/example/project/svc/de",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/graeme-hill/gnet/svc/de/proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "de",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//vendor/github.com/graeme-hill/gnet/svc/de/proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
