load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scan_client.go"],
    importpath = "github.com/graeme-hill/gnet/sys/scan",
    visibility = ["//visibility:public"],
    deps = [
        "//sys/scan/proto:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
