load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "photos_proto",
    srcs = ["photos.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "photos_go_proto",
    importpath = "github.com/graeme-hill/gnet/photos/events/proto",
    proto = ":photos_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":photos_go_proto"],
    importpath = "github.com/graeme-hill/gnet/photos/events/proto",
    visibility = ["//visibility:public"],
)
